--- a/auto/index.html
+++ b/auto/index.html
@@ -15,7 +15,24 @@
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+
+    <div><a>Авто</a></div>
+
+    <div id="headerBar_toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+  </div>
+  <div id="headerBar">
+    <div>
+      <a href="../auto/" title="free"><img src="" alt="style"> Авто</a>
+    </div>
+  </div>
 </header>
 
 <main class="flex">
@@ -29,7 +46,7 @@
 <div>
   <li>Volkswagen Golf III 1.9TDI 90hp,110hp,64hp,75hp 4.1-6.8l/100km 90-130тр</li>
   <li><a href="https://www.drive2.ru/o/b/516816645616829209/">Проблемы и надежность двигателя 1.9 TDI (1Z, AHU, AFN)</a></li>
-  <li><a href="https://auto.ru/cars/volkswagen/used/engine-dizel/?year_from=1991&power_from=90&transmission=MECHANICAL&sort=price-asc">auto.ru</a></li>
+  <li><a href="https://auto.ru/cars/volkswagen/used/engine-dizel/?year_from=1991&power_from=90&power_to=90&transmission=MECHANICAL&sort=price-asc">auto.ru</a></li>
   <li>Suzuki Wagon R Wide I . 1l 70лс 6л/100км</li>
   <li><a href="https://www.youtube.com/watch?v=vWtm5YVo_O4">Suzuki Wagon R+ (1998) Review</a></li>
   <li>Toyota Carolla VII(E100) 1.3MT/73hp,80hp 5.8l/100km 130тр</li>
