--- a/index.html
+++ b/index.html
@@ -36,32 +36,23 @@ margin-bottom: .5rem;
     <td><a><img src="icons/favicon.ico" alt="home"></a></td><td></td>
   </tr>
   <tr>
+    <td><a href="delo/" title="Дело"><img src="" alt=""></a></td>
+    <td><a href="delo/"> Дело</a></td></tr>
+  <tr>
+    <td><a href="auto/" title="Авто"><img src="" alt=""></a></td>
+    <td><a href="auto/"> Авто</a></td></tr>
+  <tr>
     <td><a href="sailing/" title="sailing"><img src="icons/sailing.png" alt="sailing"></a></td>
     <td><a href="sailing/"> Паруса</a></td></tr>
   <tr>
     <td><a href="programming/#programming" title="programming"><img src="icons/programing.png" alt="programming"></a></td>
     <td><a href="programming/#programming"> Программирование</a></td></tr>
   <tr>
-    <td><a href="zdorovie/" title="Здоровье"><img src="icons/zdorovie.png" alt="Здоровье"></a></td>
-    <td><a href="zdorovie/"> Здоровье</a></td></tr>
-  <tr>
-    <td><a href="linguistics/" title="Языкознание"><img src="" alt=""></a></td>
-    <td><a href="linguistics/"> Языкознание</a></td></tr>
-  <tr>
-    <td><a href="style/" title="Стиль"><img src="" alt=""></a></td>
-    <td><a href="style/"> Стиль</a></td></tr>
-  <tr>
     <td><a href="eco/" title="Экология"><img src="" alt=""></a></td>
     <td><a href="eco/"> Экология</a></td></tr>
   <tr>
     <td><a href="libre/" title="free"><img src="" alt=""></a></td>
     <td><a href="libre/"> libre</a></td></tr>
-  <tr>
-    <td><a href="family/" title="family"><img src="" alt=""></a></td>
-    <td><a href="family/"> Фамилия</a></td></tr>
-  <tr>
-    <td><a href="delo/" title="Дело"><img src="" alt=""></a></td>
-    <td><a href="delo/"> Дело</a></td></tr>
   <tr>
     <td><a href="steam/" title="Паровые Технологии"><img src="" alt=""></a></td>
     <td><a href="steam/"> Паровые Технологии</a></td></tr>
@@ -72,8 +63,17 @@ margin-bottom: .5rem;
     <td><a href="metal/" title="Металообработка"><img src="" alt=""></a></td>
     <td><a href="metal/"> Металообработка</a></td></tr>
   <tr>
-    <td><a href="auto/" title="Авто"><img src="" alt=""></a></td>
-    <td><a href="auto/"> Авто</a></td></tr>
+    <td><a href="zdorovie/" title="Здоровье"><img src="icons/zdorovie.png" alt="Здоровье"></a></td>
+    <td><a href="zdorovie/"> Здоровье</a></td></tr>
+  <tr>
+    <td><a href="linguistics/" title="Языкознание"><img src="" alt=""></a></td>
+    <td><a href="linguistics/"> Языкознание</a></td></tr>
+  <tr>
+    <td><a href="family/" title="family"><img src="" alt=""></a></td>
+    <td><a href="family/"> Фамилия</a></td></tr>
+  <tr>
+    <td><a href="style/" title="Стиль"><img src="" alt=""></a></td>
+    <td><a href="style/"> Стиль</a></td></tr>
 </td>
 
 <td>
@@ -92,6 +92,10 @@ margin-bottom: .5rem;
   <tr>
     <td><a href="surf/" title="Серфинг"><img src="icons/surf.png" alt="surf"></a></td>
     <td><a href="surf/"> Сёрфинг</a></td></tr>
+  <tr>
+    <td></td><td><a href="https://www.startpage.com/" target="_blank">startpage - поиск</a></td></tr>
+  <tr>
+    <td></td><td><a href="https://www.alib.ru/" target="_blank">alib.ru - букинистические книги</a></td></tr>
 </td>
 
 <!-- <a href="F1_Challenge/" title="formula 1"><img src="icons/f1.png" alt="formula 1"></a> -->
