--- a/linguistics/index.html
+++ b/linguistics/index.html
@@ -28,16 +28,72 @@
     <li><a href="https://upload.wikimedia.org/wikipedia/commons/4/42/Das_Buch_der_Schrift_%28Faulmann%29_094.jpg">Faulmann</a></li>
     <li><a href="https://archive.org/details/atextbooknorths00cookgoog/page/n452/mode/2up">A Text-book of North-Semitic Inscriptions: Moabite, Hebrew, Phoenician, Aramaic, Nabataean . 1903</a></li>
 </div>
-    <div>
-        <h3>Грузинский</h3>
-        <a href="../linguistics/gruzin.jpg" data-lightbox="1" data-title=""><img src="../linguistics/gruzin-200.jpg"></a>
-        <a href="../linguistics/gruzin2.png" data-lightbox="1" data-title=""><img src="../linguistics/gruzin2-200.png"></a>
-    </div>
 
-    <div id="links">
-        <a href="https://www.youtube.com/playlist?list=PLJE3p5f_2oQ5HO-5s8GkPLOwEOUccCFxC">Арабский алфавит (Po-ArabskiRU)</a><br>
-    </div>
-<div></div>
+<div>
+    <h3></h3>
+    Греческий, Армянский, Фригийский
+</div>
+
+<div>
+    <h3>Грузинский (Картвельский)</h3>
+    <a href="../linguistics/gruzin.jpg" data-lightbox="1" data-title=""><img src="../linguistics/gruzin-200.jpg"></a>
+    <a href="../linguistics/gruzin2.png" data-lightbox="1" data-title=""><img src="../linguistics/gruzin2-200.png"></a>
+</div>
+
+<div id="links">
+    Иврит, Арамейский, Арабский
+    <a href="https://www.youtube.com/playlist?list=PLJE3p5f_2oQ5HO-5s8GkPLOwEOUccCFxC">Арабский алфавит (Po-ArabskiRU)</a><br>
+</div>
+<div>
+    <h3>Санскрит</h3>
+    оказал влияние на языки северной Индии (Хинди, Урду, Бенгали, Маратхи, Кашмирский, Пенджаби, Непальский, Цыганский, Тибетский)<br>
+    <a href="https://ru.wikipedia.org/wiki/%D0%A3%D0%BF%D0%B0%D0%BD%D0%B8%D1%88%D0%B0%D0%B4%D1%8B">Упаниша́ды उपनिषद्</a><br>
+</div>
+
+<div>
+  <h3>Персидский</h3>
+  <li>Скифо-сарматский
+      <ul>
+        <li>Аланский > Осетинский</li>
+      </ul>
+  </li>
+  <li>Авестийский, Авестийский алфавит, до VII в. до н. э.
+      <ul></ul>
+  </li>
+  <li>Хорезмийский, Арамейское и Арабское письмо, до 13века
+    <ul>
+      <li>Узбекский</li>
+    </ul>
+  </li>
+  <li>Согди́йский, Согдийское письмо, до 13века
+    <ul>
+      <li>Узбекский</li>
+      <li>Ягнобский</li>
+    </ul>
+  </li>
+  <li>Бактрийский (Самоназвание - арийский (αρια)), Греческое и Манихейское письмо, до IX века
+    <ul>
+      <li>Мунджа́нский</li>
+    </ul>
+  </li>
+  <li>Парфянский (parsīk, pahlavīk, pahlawānīg), Пехлеви и Манихейское письмо, до VI века
+    <ul>
+      <li>Среднеперсидский (пехлеви́йский, пехлеви́ (букв. «парфянский»); самоназвание — pārsīk или pārsīg «персидский»), Пехлеви и Манихейское письмо, III—IX века
+        <ul>
+          <li>Парси > Новоперсидский (Персидский, Фарси, Дари, فارْسِى), Персидская письменность, с Х века
+          </li>
+          <li>Пушту پښتو , Алфавит пушту, с XV века</li>
+        </ul>
+      </li>
+      <li>Армянский</li>
+    </ul>
+  </li>
+</div>
+
+<div>
+    <h3></h3>
+    Старославянский, Древнерусский, Древнепрусский
+</div>
 
 </main>
 
