--- a/programming/programming.html
+++ b/programming/programming.html
@@ -11,6 +11,7 @@
 	<a href="#css">CSS</a><br>
 		<!-- <img src="../icons/css.svg" alt="css" title="css"></a> -->
 	<a href="#database">DB/SQL</a><br>
+	<a href="#ui_design">Дизайн</a>
 	<a href="#expressjs">ExpressJS</a><br>
 		<!-- <img src="https://expressjs.com/images/favicon.png" alt="ExpressJS" title="ExpressJS"></a> -->
 	<a href="#flutter">Flutter</a><br>
@@ -138,6 +139,7 @@ traceroute -q www.mit.edu
 	<a href="https://yewtu.be/watch?v=CBqj_ezcBfo">BFF на NestJS – Калинина Александра</a><br>
 	<a href="https://dev.to/qiuzhi99/introduction-to-bff-and-nestjs-13mo">Introduction to BFF and NestJS</a><br>
 	<a href="https://habr.com/ru/company/first/blog/653771/">Простые сайты снова в моде. Минимализм возвращается</a><br>
+	<a href="https://coderoad.ru/">coderoad.ru</a><br>
 	<a href="https://signup.cloud.oracle.com/?language=en">Oracle Cloud Free Tier</a><br>
 	<a href="https://youtu.be/NmGGcarGnqU">Автостопом по фронтенду, или Эволюция фреймворков</a><br>
 	<a href="https://youtu.be/F2B_rvHwz0g">Эффективное тестирование верстки / Максим Соснов (СКБ Контур)</a><br>
@@ -181,6 +183,7 @@ traceroute -q www.mit.edu
 		<li><a href="https://www.youtube.com/channel/UCSVFz1xIEyOrpbowJjCxdvQ">Kaspersky Tech</a></li>
 		<li><a href="https://www.youtube.com/channel/UCvtjmCNTXsvsi4ZyV-WSUAg/videos">Team Mailru Group</a></li>
 		<li><a href="https://www.youtube.com/channel/UCxKXx-eVWNib87Wst7nv_KQ/videos">GDG Russia</a></li>
+		<li><a href="https://route256.ozon.ru/">route256.ozon</a></li>
 </ul></div>
 
 <div>
@@ -213,6 +216,8 @@ traceroute -q www.mit.edu
 
 <div class="img32">
 		<h3>Функциональное<br>программирование</h3>
+		<a href="https://y.com.sb/playlist?list=PLZVuw0anGkWTEWKfsYXFo8U0nMd9PfCm4">Программирование с зависимыми типами на языке Idris</a><br>
+		<a href="https://y.com.sb/playlist?list=PLEqoHzpnmTfD8ocGHDAMUfxTtchqSvrWn">Мини-курс «Функциональное программирование с зависимыми типами на языке Idris» (Виталий Брагилевский)</a>
 		<a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
 		<a href="https://github.com/edwinb/Idris2">Idris2</a>
 		<a href="https://youtu.be/mOtKD7ml0NU" title="youtube">.</a>
@@ -280,44 +285,6 @@ traceroute -q www.mit.edu
 </div></details>
 </div>
 
-<div>
-		<h2>design / Верстка</h2>
-		<ul>
-			capture a window on Mac (Shift, Command, 4, and Space bar)
-			<li><a href="https://ofont.ru/">ofont.ru</a></li>
-			<li><a href="https://tilda.cc/ru/madeontilda/#c=portfolio">Примеры дизайнов на тильде</a></li>
-			<li><a href="https://ledovskikh-pl.ru/">primer1</a> , <a href="http://kseniabelovaphoto.tilda.ws/"> primer2</a></li>
-				<li><a href="https://material-ui.com">Material-UI</a></li>
-				<li><a href="https://masonry.desandro.com/">Masonry</a></li>
-				<li><a href="https://materializecss.com"><img src="https://materializecss.com/res/materialize.svg" alt="materialize">materialize-css</a></li>
-				<li><a href="https://www.muicss.com/">MUI</a></li>
-				<li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
-				<li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
-				<li><a href="https://thenounproject.com/">theNounProject</a></li>
-				<li><a href="https://loading.io/">loading.io</a></li>
-				<li><a href="https://www.microsoft.com/design/">Microsoft design</a></li>
-				<li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
-				<li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
-				<li>Axure - проектирование прототипа сайта/приложения</li>
-				<li><a href="https://www.gimp.org/">gimp.org</a></li>
-				<li><a href="https://www.figma.com"><img src="https://static.figma.com/app/icon/1/favicon.png" alt="figma"> figma.com</a> <span style="color: rgba(0,0,0,0);">1stepnoi</span> <a href="https://htmlacademy.ru/blog/useful/image/figma">Старт в Figma для верстальщика</a></li>
-				<li>AdobeXD</li>
-				<li><a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico" alt="awwwards"> awwwards.com</a></li>
-				<li><a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png" alt="cssdsgn"> cssdsgn.com</a></li>
-				<li><a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png" alt="unsplash"> unsplash.com</a></li>
-				<li><a href="https://www.flaticon.com">flaticon</a></li>
-				<li><a href="https://icons8.com"><img src="https://photos.icons8.com/vue-static/moose/favs/favicon.ico" alt="icons8"> icons8.com</a></li>
-				<li><a href="https://unicode-table.com/">Таблица символов Юникода</a></li>
-				<li><a href="https://dribbble.com/search?q=cards">dribbble.com</a></li>
-				<li><a href="https://coolors.co">coolors.co</a></li>
-				<li><a href="https://color.adobe.com">color.adobe.com</a></li>
-				<li><a href="https://clrs.cc">clrs.cc</a></li>
-				<li><a href="https://flatuicolors.com">flatuicolors.com</a></li>
-				<li><a href="https://colordrop.io">colordrop.io</a></li>
-		<li><a href="https://www.webfx.com/web-design/color-picker/">color-picker</a></li>
-		<li><img src="https://static.tildacdn.com/img/tildafavicon.ico" alt="tilda"> <a href="https://tilda.cc/ru/">tilda.cc</a></li>
-		</ul>
-</div>
 
 <div class="img16">
 		<h2>Hosting / Domain /<br> Deploy / DevOps</h2>
@@ -351,16 +318,6 @@ traceroute -q www.mit.edu
 		<rect width="8" height="8" style="fill: #00A4EF; stroke-width: .2; stroke: black" y="8"></rect></svg> .Microsoft Azure</a><br>
 		<a href="https://www.namecheap.com"><img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px" alt="namecheap.com"> namecheap.com</a><br>
 		<a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px" alt="gpdhost.com"> gpdhost</a><br>
-</div>
-
-<div>
-		<a href="https://veryberry.com.ua">veryberry.com.ua</a><br>
-		<a href="https://www.nitrousa.com">nitrousa.com</a><br>
-		<a href="https://www.svo.aero/">svo.aero</a><br>
-		<a href="http://www.hugeinc.com">hugeinc.com</a><br>
-		<a href="http://www.nurturedigital.com">nurturedigital.com</a><br>
-		<a href="https://fontface.ninja">fontface.ninja</a><br>
-		<a href="https://epicurrence.com">epicurrence.com</a><br>
 </div>
 
 <div class="img32"><h2>инструменты Web</h2>
@@ -485,11 +442,11 @@ public class Home {
 	<a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
 	<a href="https://codepen.io/leonardasf1/pen/NWWgzmx">DNA</a><br>
 	<hr>
+	<a href="https://codeberg.org/pluja/kycnot.me">pluja/kycnot.me</a>
 	<a href="https://yadi.sk/d/tk7BjQ9adBx5Hg">Zippy Простой лендинг в PSD.</a><br>
 	<a href="https://drive.google.com/file/d/1VgH1lyZq_1zCz-YWBZw8Kifx5JTFdwPe/">Интернет-магазин часов. Адаптивный макет в формате Figma</a><br>
 	<a href="https://yadi.sk/d/vitPq1t5mS7rRQ">Kross. Сайт-портфолио в PSD</a><br>
 	<a href="https://drive.google.com/file/d/1ByXB1fYHiTXINFROvZ0mYdJpYOgoUsBO/">Лендинг курса по Customer Development. Макет для Figma.</a><br>
 	<a href="https://yadi.sk/d/aQDWvM_2L-wT9w">MilasTask Небольшая страничка-портфолио.</a><br>
-	<a href="https://yadi.sk/d/xO_d7Vg6iQmURw">Peridona Лендинг для серьёзных дел.</a><br><a href="https://cake.ru/">cake.ru</a><br>
-	<a href="https://hsworld.ru/systems">hsworld.ru</a><br>
+	<a href="https://yadi.sk/d/xO_d7Vg6iQmURw">Peridona Лендинг для серьёзных дел.</a><br>
 </div>
