--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -11,6 +11,7 @@
   <a href="https://github.com/tehcookies/bundlers-comparison/tree/master/webpack-advanced">webpack-advanced</a><br>
   yarn outdated //проверка пакетов на актуальность<br>
   yarn audit --fix//проверка на уязвимость и исправление<br>
+  <a href="https://webpack.js.org/guides/code-splitting/">code-splitting</a>
 </div>
 
 <article>
