--- a/delo/index.html
+++ b/delo/index.html
@@ -7,69 +7,202 @@
   <title>Дело</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <link rel="manifest" href="../manifest.webmanifest">
+  <link rel="stylesheet" href="../CSS/lb_style.css">
   <script src="../JS/main.js" type="module"></script>
-
-<!--   <link rel="stylesheet" href="../CSS/lb_style.css">
-   <script src="../JS/lazysizes.min.js" async=""></script> -->
 </head>
 
 <body>
 
 <header>
-  <div id="headerMenu"></div>
+  <div id="headerMenu">
+
+    <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
+    <div class="headDivTog"><a href="../delo/">Дело</a></div>
+    <div class="headDivTog"><a href="#ooo">OOO</a></div>
+    <div class="headDivTog"><a href="#nalog">Налоги</a></div>
+    <div id="headerBar_toggle"><span></span><span></span><span></span></div>
+
+  </div>
+  <div id="headerBar">
+    <div>
+      <a href="../delo/" title=" Дело"><img src="" alt="style"> Дело</a>
+    </div>
+  </div>
 </header>
 
 <main class="flex">
-
-<nav></nav>
 
 <div id="links">
   <li><a href="https://www.insales.ru/blogs/university">InSales</a></li>
   <li><a href="https://rosreestr.gov.ru/">РосРеестр</a></li>
   <li><a href="https://mofmicro.ru/ru/">Мой бизнес микрозаймы для вашего бизнеса</a></li>
   <li><a href="https://yewtu.be/watch?v=4q5sIAlHcyU">Мышление успешных людей. Брайан Трейси.</a></li>
-  <li><a href="https://www.wildberries.ru/seller/52218">Ptaho - WB</a></li>
+  <li>Бизнес-стратегия. От изучения рыночной среды до выработки беспроигрышных решений. Дэвид Аакер. 2007</li>
+  <li><a href="https://mbschool.ru/">Moscow Business School</a></li>
+  <li><a href="https://uprav.ru/">Русская Школа Управления</a></li>
+  Стратегия продвижения.
+  Миссия у бизнеса, какую социальную ценность несет?
+  Кто мой клиент?
+  Кто мой конкурент?(аналогичн, похожие, смежные(заменяющие))
+  Какой у меня продукт?
+  Какое у меня уникально торговое предложение (УТП)
+  характеристика + преимущества + выгода (ХПВ)
+  Какие смыслы я буду транслировать моец ЦА?
+  Качественный продукт его признаки, какие проблемы закрывет.
+  Я и моя команда профессионалы, потому что...транслировать свое мнение
+  А это я, всем привет!
+  Как транслировать смыслы?
+
+</div>
+
+<div>
+  <h2>Проверка контрагентов</h2>
+  <li><a href="https://egrul.nalog.ru/index.html">ЕГРЮЛ</a></li>
+  <li>прокуратура</li>
+  <li>судебные приставы</li>
+  <li>арбитражные суды</li>
 </div>
 
 <div>
   <h2>Дела бумажные</h2>
+  <li><a href="https://tensor.ru/uc/ep/kep#:~:text=%D0%A3%D1%81%D0%B8%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%BA%D0%B2%D0%B0%D0%BB%D0%B8%D1%84%D0%B8%D1%86%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%B0%D1%8F%20%D1%8D%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%BF%D0%BE%D0%B4%D0%BF%D0%B8%D1%81%D1%8C%20(%D0%9A%D0%AD%D0%9F,%D0%A4%D0%97%20%D0%BE%D1%82%2006.04.2011).">Квалифицированная подпись — где использовать и как получить</a></li>
+  <li><a href="http://www.consultant.ru/document/cons_doc_LAW_8743/">Федеральный закон от 26.12.1995 N 208-ФЗ (ред. от 25.02.2022) "Об акционерных обществах"</a></li>
   <li><a href="https://www.moedelo.org/">Моё дело</a></li>
+  <li><a href="https://y.com.sb/channel/UCx8H3QKTV5Z-_BLMBAoPNIQ">Urvista</a></li>
   <li><a href="https://digital.gov.ru/ru/activity/govservices/1/">Аккредитация ИТ-компаний</a></li>
   <li><a href="https://kkt-online.nalog.ru/">kkt-online.nalog.ru</a></li>
   <li><a href="https://data.nalog.ru/create_business/ul/creation/">nalog.ru/create_business</a></li>
   <li><a href="https://yewtu.be/channel/UCPoUX9fdqATQG7VVPiSzCiA">Переводчик с бухгалтерского</a></li>
   <li><a href="https://tube.cthd.icu/channel/UCuHMA6ZFJtYQpbfNAGPOKTQ">Некторов, Савельев и Партнеры</a></li>
+  <br>
+  <li>Банки под санкциями<ul>
+    <li>Открытие(100% госуд)</li>
+    <li>Совкомбанк(частный банк)</li>
+    <li>ВТБ(частично госуд)</li>
+    <li>Новикомбанк(100% госуд)</li>
+    <li>Альфа-банк</li>
+    <li>МКБ</li>
+    <li>Газпромбанк</li>
+    <li>Россельхозбанк</li> 
+    <li>Промсвязьбанк</li>
+    <li>банк Россия</li>
+    <li>ВЭБ</li>
+  </ul></li>
+  <li>Банки не под санкциями
+    <ul>
+      <li>Сбер</li>
+      <li>Райффайзен</li>
+      <li>Росбанк</li>
+      <li>ЮниКредитБанк</li>
+      <li></li>
+    </ul>
+  </li>
+
+  <li>
+    ЭДО
+    <ul>
+      <li><a href="https://diadoc.ru">diadoc для ozon</a></li>
+    </ul>
+  </li>
+
+  <li>Сертификаты<ul>
+  <ul><h3>Документы на товар. Запросить у поставщика:</h3>
+    <li>декларация</li>
+    <li>или сертификат соответствия</li>
+    <li>или добровольный сертификат соответствия</li>
+    <li>или отказное письмо</li>
+    <li>на брендировнный товар, договор купли-продажи</li>
+  </ul>
+    <li><a href="https://fsa.gov.ru">Проверка сертификатов</a></li>
+    <li><a href="https;//www.gostest.com">Сертификаты, декларации, отказные письма</a></li>
+    <li><a href="https://www.nalog.gov.ru/rn77/about_fts/docs/3997096/">Порядок получения лицензий закреплен Федеральным законом от 04.05.2011 № 99-ФЗ «О лицензировании отдельных видов деятельности».</a></li>
+  </ul></li>
+
+  <li>Товарный знак
+    <ul>
+      <li><a href="https://onlinepatent.ru">onlinepatent 25тр + 22тр</a></li>
+      <li></li>
+    </ul>
+  </li>
+
 </div>
 
 <div>
   <h2>Marketplaces</h2>
   <li><a href="https://seller-edu.ozon.ru/docs/rfbs/">Ozon Продажа со своего склада (realFBS)</a></li>
+  <li><a href="https://www.livemaster.ru/">Ярмарка Мастеров</a></li>
   <li><a href="https://seller-edu.ozon.ru/docs/contract-for-sellers/contract-for-sell-goods-on-ozon.html#%D1%80%D0%B0%D0%B7%D0%B4%D0%B5%D0%BB-%C2%AB%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BA-%D1%82%D0%BE%D0%B2%D0%B0%D1%80%D1%83%C2%BB">contract-for-sell-goods-on-ozon</a></li>
   <li><a href="https://seller-edu.ozon.ru/">База знаний маркетплейса —
 как продавать на Ozon</a></li>
   <li><a href="https://calculator.ozon.ru/">calculator.ozon</a></li>
+  <li><a href="https://docs.ozon.ru/performance/">Рекламная платформа Ozon</a></li>
+</div>
+
+<div>
+  <h2>Реклама</h2>
+  <li><a href="https://target.my.com/">myTarget</a></li>
+  <li><a href="https://direct.yandex.ru/">direct.yandex</a></li>
+  <li><a href="https://vk.com/ads">vk.com/ads</a></li>
+  <li><a href="https://popsters.ru/">popsters</a></li>
+  <li><a href="https://www.bukvarix.com/">bukvarix</a></li>
+  <li><a href="https://online.slems.ru/cms/system/login">Т.У.З.И.Р.</a></li>
+  <li><a href="https://yandex.ru/adv/edu/online/direct">Школа Директа</a></li>
+  <li><a href="https://tilda.education/articles-how-to-use-utm-url">Зачем нужны UTM-метки и как их использовать</a></li>
+  Чек-листы: ▶️ 15 убойных лид-магнитов - https://clck.ru/ebxon ▶️ Формула лендинга «4 почему» - https://clck.ru/ebxoR ▶️ Чек-лист перед запуском РК в таргетинге - https://clck.ru/ebxkC ▶️ Продающая формула AIDA - https://clck.ru/ebxrG
 </div>
 
 <div>
   <h2>Логистика и склад</h2>
+  Если заказ поступил 14 апреля до 13:00 — его нужно собрать до 13:00 15 апреля, если после — до 13:00 16 апреля <br>
   <li><a href="https://www.cdek.ru/ru">cdek</a></li>
   <li><a href="https://boxberry.ru/">boxberry</a></li>
   <li>lomond бумага самоклеющаяся а4</li>
   <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/korobki-kartonnye/gofrokarton-listovoj-i-v-rulonakh/karton-listovoj-buryj-gofrokarton-400kh600-mm-t-21-profil-v/p/1155871/">Картон листовой бурый (гофрокартон) 400х600 мм Т-21 профиль В</a></li>
   <li><a href="https://www.komus.ru/katalog/upakovka-i-markirovka/-plenka-strejch-upakovochnaya/plenka-strejch-dlya-ruchnoj-upakovki/strejch-plenka-bagazhnaya-dlya-ruchnoj-upakovki-unibob-ves-0-23-kg-20-mkm-x-25-sm-kh-50-m/p/854632/?from=block-301-1">Стрейч-пленка багажная для ручной упаковки Unibob вес 0.23 кг 20 мкм x 25 см х 50 м</a></li>
+  <li><a href="https://www.dns-shop.ru/product/2da9066478853332/mfu-strujnoe-hp-deskjet-2320-all-in-one/">МФУ струйное HP DeskJet 2320 All-in-One</a></li>
 </div>
 
 <div>
   <h2>Инвестиции</h2>
   <li>фильм Хэнк: 5 лет на краю</li>
   <li>фильм Китайское дело</li>
+  <li>Капитализм: история любви</li>
   <li><a href="http://cbr.ru/press/PR/?file=20102015_100129ik2015-10-20t10_01_03.htm">Об утверждении перечня системно значимых кредитных организаций</a></li>
   <li><a href="https://ru.tradingview.com/symbols/MOEX-YNDX/">Trading View</a></li>
   <li><a href="https://www.finam.ru/quote/moex-akcii/sberbank/">Finam</a></li>
   <li><a href="https://www.moex.com/ru/marketdata/#/mode=groups&group=4&collection=160&boardgroup=57&data_type=current">MOEX</a></li>
   <li><a href="https://alfabank.ru/make-money/investments/help/faq/"> Альфа-банк. Инвестиции. Вопросы и ответы</a></li>
   <li><a href="https://lk.alfadirect.ru/notifications">alfadirect</a></li>
+  <pre><code>
+Центральный Банк РФ
+           V
+Национальная система платежных карт(АО НСПК р/с ПАО Банк ВТБ) + Банк России
+                                    V
+Система быстрых платежей(СБП) , Платежная система "Мир"
+  </code></pre>
+</div>
+
+<div>
+  <h2>Концепция</h2>
+  <p>это главная идея, смысл, задумка, общий взгляд на ваш бизнес... Кто вы? Зачем? И для кого?</p>
+  <p>"Компания" - поставщик домашних, профессиональных и портативных решений в сфере аудио и видео для увлеченных людей, искренне влюбленных в музыку и кино. Услуги предоставляются с комфортом для покупателя (будь то онлайн или личное общение). Ассортимент компании тщательно подобран, предоставляя качественные компоненты решений, которые будут радовать клиента долгие годы, а также впишутсяв окружение, экосистему, в которой будут использоваться. Покупатели ощущают и отмечают высокую ценность предложений компании и высокий уровень обслуживания.</p>
+  <p>"Компания" постоянно совершенствуется, чутко реагируя на рыночную ситуацию, предоставляя уникальные услуги, подтверждая свое лидерство на рынке. Таким образом "Компания" не только удовлетворяет, но и превосходит ожидания и нужды клиентов.</p>
+</div>
+
+<div>
+  <h2>Товары</h2>
+  <li><a href="https://www.wildberries.ru/seller/52218">Ptaho - WB</a> . <a href="https://www.livemaster.ru/lakebindery">livemaster</a> . <a href="https://ptaho.ru">ptaho.ru</a></li>
+  Кожаный блокнот на кольцах А4 Narbut. Блокнот из натуральной кожи со сменными блоками на 100 листов. кожа КРС с покрытием "Невада" толщ.2.8-3.0 рыже-коричневый 18руб/дм2
+  <li>Импульсивные покупки - цена 500-3000р</li>
+  <li>Электрическая зубн.щетка, Конструктор Lego, Подгузники, Эко-Косметика</li>
+  <li>Зубная паста Sabai Thai ООО КИНВЕСТ <a href="https://www.sabaithai.ru">sabaithai.ru</a></li>
+  <li>Масло растительное нерафинированное льняное ООО Бизнесойл</li>
+  <li>Шарф из Кашемира ООО Первая Торговая Компания</li>
+</div>
+
+<div>
+  <h2>Касса</h2>
+  <a href="https://kontur.ru/ofd">Контур.ОФД</a>
 </div>
 
 <div>
@@ -77,7 +210,7 @@
   <br>
   <div>
     <h3>могу предложить</h3>
-    <li>Книга для записей А4, Натуральная кожа, кольцевой механизм, сменные листы 100шт</li>
+    <li>Кожаный блокнот на кольцах А4 Narbut. Блокнот из натуральной кожи со сменными блоками на 100 листов.</li>
     <li>Делаю сайты</li>
   </div>
   <br>
@@ -90,6 +223,7 @@
     </ol>
   </div>
 </div>
+
 <div>
   Развивающийся бизнесмен с собственной веб-студией, прибыльным интернет-магазином и фермой в несколько гектар!
 </div>
