--- a/auto/index.html
+++ b/auto/index.html
@@ -40,19 +40,39 @@
 <nav></nav>
 
 <div id="links">
+  <li><a href="https://modelist-konstruktor.com/razrabotki/samyj-bezopasnyj-avtomobil">Самый безопасный автомобиль</a></li>
+  <li><a href="https://edrom.ru/">Автоматический поиск объявлений - edrom</a></li>
+  <li><a href="https://haraba.ru/">Весь бизнес перекупа в одном сервисе - haraba</a></li>
+  <li><a href="http://crwl.ru/ex/">crwl</a></li>
   <li><a href="https://www.drive2.ru">drive2</a></li>
+  <li><a href="https://assets.avtocod.ru/storage/files/avtocod_book/sekrety_bezopasnoy_pokupki_avtomobilya.pdf">Секреты безопасной покупки подержанного автомобиля</a></li>
+  <li><a href="https://journal.tinkoff.ru/successful-car-resale/">Как зарабатывать на перепродаже б/у автомобилей</a></li>
+  <li><a href="https://avtocod.ru/blog">avtocod.ru/blog</a></li>
+  <li><a href="https://vnx.su/">vnx.su</a></li>
+  <li><a href="https://atcars.ru/">ATcars.ru – база онлайн руководств для автомобилей</a></li>
+</div>
+
+<div><h3>Проверка</h3>
+  <li>vin-номер, серия СТС, серия ПТС</li>
+  <li><a href="https://www.reestr-zalogov.ru/search">Реестр залогов</a></li>
+  <li><a href="https://fssp.gov.ru/">Федеральная служба
+судебных приставов</a></li>
+  <li><a href="https://xn--90adear.xn--p1ai/check/auto#">ГИБДД</a></li>
+  <a href="https://checkperson.ru/check_car_owner">Проверка владельца автомобиля</a><br>
 </div>
 
 <div>
+  <li>Peugeot 206 1.4 75hp 6.3l/100km 130тр</li>
+  <p>Ставишь доработанную балку с тавотнецей под смазку подшипника и забудь о проблеме, вечной и осенью шприцуй и всё цена 19000!!</p>
   <li>Volkswagen Golf III 1.9TDI 90hp,110hp,64hp,75hp 4.1-6.8l/100km 90-130тр</li>
   <li><a href="https://www.drive2.ru/o/b/516816645616829209/">Проблемы и надежность двигателя 1.9 TDI (1Z, AHU, AFN)</a></li>
   <li><a href="https://auto.ru/cars/volkswagen/used/engine-dizel/?year_from=1991&power_from=90&power_to=90&transmission=MECHANICAL&sort=price-asc">auto.ru</a></li>
+  <li><a href="https://auto.ru/schelkovo/cars/used/engine-dizel/?year_from=1929&transmission=MECHANICAL&sort=price-asc">Дизельные</a></li>
   <li>Suzuki Wagon R Wide I . 1l 70лс 6л/100км</li>
   <li><a href="https://www.youtube.com/watch?v=vWtm5YVo_O4">Suzuki Wagon R+ (1998) Review</a></li>
   <li>Toyota Carolla VII(E100) 1.3MT/73hp,80hp 5.8l/100km 130тр</li>
   <li>Volkswagen Polo 1999 Res Mk3 1.0 50hp 5.9l/100km 130тр</li>
   <li>Opel Astra G 1.7 MT diz 75hp,80hp 4.4l/100km от150тр</li>
-  <li>Peugeot 206 1.4 75hp 6.3l/100km 130тр</li>
   <li>Volkswagen Sharan I 1.9TDI 90hp 6.6l/100km</li>
 
   <li>Peugeot 206 1.4d/68hp,1.6d/109hp,2.0d/90hp 3.6-6.6l/100km</li>
@@ -72,6 +92,40 @@
   <li>Volvo V40 Cross Country 2.0 diz 120hp 4l/100km</li>
   <li>Skoda Octavia 2.0 TDI diz 4.1l/100km</li>
   <li>Замена двигателя , СВАП</li>
+</div>
+
+<div>
+  <h4>рекомендации по покупке автомобиля:</h4>
+  <ol>
+    <li>Закажите у нотариуса заверенную выписку из реестра залогов. Если впоследствии автомобиль окажется залоговым, документ докажет, что вы добросовестный покупатель и являетесь законным владельцем ТС.</li>
+    <li>Проверьте владельца автомобиля на наличие долгов. Из-за неоплаченных штрафов, алиментов и других задолженностей в отношении продавца может быть открыто исполнительное производство, из-за которого на автомобиль могут быть наложены регистрационные ограничения. Получить сведения о долгах владельца можно на сайте checkperson.ru .</li>
+    <li>Сравните данные в паспорте продавца, в ПТС и в договоре купли-продажи. Они должны совпадать. Если продавец не является собственником автомобиля, то он не будет нести ответственности за машину и за сделку по ее продаже.</li>
+    <li>Повторно проверьте историю автомобиля перед покупкой. Данные в отчёте актуальны только на момент запроса.</li>
+    <li>Заполните договор купли-продажи автомобиля в трех экземплярах: для продавца, для покупателя, для ГИБДД. <a href="dogovor_kupli_prodazi_TS.doc" target="_blank">Скачать бланк договора.</a></li>
+    <li>В течение 10 дней после покупки поставьте автомобиль на учет в ГИБДД. Лучше посетите отделение ГИБДД вместе с продавцом в день сделки.( после ТО и ОСАГО )</li>
+  </ol>
+  <li>Стандартная автомобильная аптечка. Цена — от 300 рублей. Можно собирать самому, но это будет дольше, а сэкономить не получится. Срок годности указывается на коробке или в инструкции внутри. Обычно он равен 3–4 годам. Можно положить внутрь лекарства, разрешенные в России.</li>
+<li>Огнетушитель. Цена — от 500 рублей. Для легкового автомобиля — более 2 литров, для грузовиков и автобусов — от 5 литров. Водителю нужно держать его под сиденьем или в багажнике автомобиля. Разрешается использовать углекислотные и порошковые огнетушители, соответствующие ГОСТ Р-51057. Обязательно наличие манометра и паспорта, подтверждающего срок годности. Использованный или просроченный огнетушитель можно заправлять — тогда на него выдаются новые документы.</li>
+<li>Знак аварийной остановки. Стоимость — от 200 рублей. Светоотражающий треугольник красного цвета с откидной подставкой. Длина сторон — не менее 50 см, высота подставки — 30 см. Лучше выбирать тяжелую модель, которую не сдует потоком воздуха от проезжающего грузовика.</li>
+<li>Светоотражающий жилет. Стоимость — от 400 рублей. За городом его обязательно надевать, когда вы выходите из автомобиля в ночное время. В городе жилет требуется только в условиях ограниченной видимости, например при густом тумане. Требования — две светоотражающие полосы шириной не менее 5 см и длиной от 10 см.</li>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+
+</div>
+
+<div><h3>Пыж</h3>
+<ul>
+  <li><a href="https://knigaproavto.ru/peugeot/314-peugeot-206-s-1998.html">knigaproavto</a></li>
+  <li><a href="https://www.drive2.ru/l/573988501482112528/">Замена лобового стекла своими руками</a></li>
+  <li><a href="https://mvoglass.ru/lobovoe-steklo-peugeot-206-206-fr-00043385-3-60-msk"></a></li>
+  <li><a href="https://proglass-msk.ru/peugeot-206-lobovye-stekla-206-1998-2012-hetchbek-5-dverej/">Автостёкла</a></li>
+  <li><a href="https://avtoservisy-peugeot.ru/station-3502914">Техцентр г. Мытищи</a></li>
+  <li><a href="https://masterprofi.net/peugeot/peugeot-206">Крылатское Мастер-профи</a></li>
+  <li></li>
+</ul>
 </div>
 
 </main>
