--- a/delo/index.html
+++ b/delo/index.html
@@ -200,6 +200,15 @@
   <li>Шарф из Кашемира ООО Первая Торговая Компания</li>
 </div>
 
+<div><h2>ОКВЭД</h2>
+  <li>33.12 Ремонт машин и оборудования</li>
+  <li>33.17 Ремонт и техническое обслуживание прочих транспортных средств и оборудования</li>
+  <li>45.3 Торговля автомобильными деталями, узлами и принадлежностями</li>
+  <li>46.14 Деятельность агентов по оптовой торговле машинами, промышленным оборудованием, судами и летательными аппаратами</li>
+  <li>46.90 Торговля оптовая неспециализированная</li>
+  <li>82.99 Деятельность по предоставлению прочих вспомогательных услуг для бизнеса, не включенная в другие группировки</li>
+</div>
+
 <div>
   <h2>Касса</h2>
   <a href="https://kontur.ru/ofd">Контур.ОФД</a>
@@ -210,7 +219,7 @@
   <br>
   <div>
     <h3>могу предложить</h3>
-    <li>Кожаный блокнот на кольцах А4 Narbut. Блокнот из натуральной кожи со сменными блоками на 100 листов.</li>
+    <li>Кожаный блокнот на кольцах А4 Narbut. Блокнот из натуральной кожи со сменными блоками на 100 листов. <a href="https://www.ozon.ru/seller/master-narbut-391489/">ozon</a>, <a href=""></a></li>
     <li>Делаю сайты</li>
   </div>
   <br>
