--- a/eco/med.html
+++ b/eco/med.html
@@ -11,3 +11,130 @@
   Бортевой мед
   Хвойная мука
 </div>
+
+<div>
+  <h3>Весна</h3>
+  Подготовка ульев к сезону, проверка пчёл после зимовки, проводится профилактическая обработка.
+  <h3>Лето</h3>
+  Вывоз ульев на мёдосбор, подготовка пчёл непосредственно к работе, сбор мёда, проверка пчёл.
+  <h3>Осень</h3>
+  Проводится чистка и дезинфекция ульев, обработка пчёл от варроатоза, подготовка к зимовке. Торговля.
+</div>
+
+<div>
+  <h3>Январь</h3>
+  Это тяжелый для пчёл месяц - все силы брошены на выживание. Насекомые, собравшись в куб, непрерывно двигаются. Пчёлы поддерживают температуру в кубе +14С. В скоплении беспрерывно происходит перемещение пчёл - одни пролазят внутрь, другие оказываются на поверхности. Чем холоднее на улице, тем активнее перемещаются пчёлы в кубе. <br>
+  Ремонт ульев, пошив подушек для их утепления, подготовка рамок и прочее оборудование. <br>
+  Чтобы продотвратить промокание и появление плесени, до наступления зимы необходима хорошая вентиляция и правильное утепление. <br>
+  Регулярно проверять улья на характер шума, вести борьбу с грызунами и следить за питанием пчёл.
+  <h3>Февраль</h3>
+  Пчёлы чувствительны к изменениям погоды, семья просыпается, предчувствуя весну. Насекомые начинают усиленно питаться, семье необходимо больше кислорода. <br>
+  Появляется первый расплод. Пчела-матка откладывает яйца, семье требуется много корма. Чтобы вырастить расплод, пчёлы увеличивают температуру среды до 34-35С. <br>
+  Работы в феврале: <br>
+  <li>Проверяют вентиляцию, очищают летки от подмора.</li>
+  <li>Продолжают бороться с грызунами.</li>
+  <li>В последнюю декаду февраля семье дают подкормку и подслащенную воду, если необходимо</li>
+  В качестве подкормки можно использовать исключительно дикий мёд или мёд эко-стандарта. <br>
+  В кишечнике у пчел начинают скапливаться экскременты, которые могут спровоцировать "понос". <br>
+  Для облегчения состояния, пчелам организовывают сверхранний облёт, убирая снежные преграды возле ульев.
+  <h3>Март</h3>
+Проверяют - есть ли корм в крайних рамках. При нехватке корма, ставят дополнительные медовые рамки. <br>
+Когда температура воздуха повысится до +8-10С, семью выставляют на первый облёт. <br>
+Очистка, осмотр и проверка ульев и состояние пчёл, подготовка к первому облёту.
+Проводят профилактическую обработку.
+  <h3>Апрель</h3>
+  <li>Наступает пора усиленного питания и роста.</li>
+  <li>Зацветают медоносы</li>
+  <li>Старый расплод гибнет, в улье останется августовский расплод и новички</li>
+  <li>Семьи отправляются в облёт, собирая нектар с первых цветков.</li>
+  <h4>задачи в апреле</h4>
+  <ol>
+    <li>Ревизия пчелиной семьи. По её итогам пчёл обеспечивают кормами - белковыми и углеводными.</li>
+    <li>Каждое гнездо обеспечивается 10кг мёда и пергой.</li>
+    <li>Проводится дезинфекция запасных ульев - для пересадки семей. Их комплектуют соторамками и утепляют.</li>
+    <li>Прежде чем пересадить пчёл в новый улей, их обрабатывают от клещей.</li>
+    <li>Дезинфицируют старые ульи.</li>
+    <li>Каждую семью подкармливают мёдом и пергой, в ульи ставят подкисленную воду в поилках.</li>
+    <li>Если в улье влажно - это устанавливается путем проверки дна и утеплительных матов, семью перемещают в сухой и прогретый улей.</li>
+  </ol>
+  <h3>Май</h3>
+  <p>Дни становятся совсем теплыми, но угроза ночных заморозков сохраняется.</p>
+  <p>Пчёлы занимаются медосбором. Весенний мёд считается самым полезным!</p>
+  <p>Хорошая пчелиная семья способна заготовить 5-10кг майского мёда.</p>
+  <h4>работы на пасеке в мае</h4>
+  <li>Убирают лишние рамки. Процедуры с рамками разделяют на несколько этапов:</li>
+  <li>1-я половина мая - выставляют рамки с сотами светлокоричневого цвета;</li>
+  <li>2-я половина мая - ставят новые рамки;</li>
+  <h3>Июнь</h3>
+  <p>Пчёлы роятся, происходит расширение семей.</p>
+  <p>Контроль со стороны пасечника - максимальный.</p>
+  <p>Если упустить роение, пчелиное поголовье заметно сократится.</p>
+  <h4>работы на пасеке в июне</h4>
+  <li>Вывоз ульев на медосбор.</li>
+  <li>Проведение противороевых мероприятий. Направление роевой энергии на медосбор.</li>
+  <li>Очередная обработка семей от клещей. Хвойной мукой.</li>
+  <li>Постановка новых корпусов.</li>
+  <li>Следят за вентиляцией - летки всегда должны быть открытыми.</li>
+  <h3>Июль</h3>
+  <p>Главный взяток. Пчёлы работают на износ, затрачивая массу энергии. Неделя год кормит.</p>
+  <p>Чтобы облегчить пчелам задачу, их выводят на медоносы - кипрей, гречиху и т.п.</p>
+  <p>Прежде чем переместить пчёл на новые места, снимают старые надставки для откачки мёда.</p>
+  Для распечатывания сот используют нож. Вскрыть мёд из под забруса и откачать его из сотов.
+  <p>Подготовка и уборка рамок, установка дополнителных корпусов</p>
+  <h3>Август</h3>
+  <p>Случаются дожди и даже заморозки</p>
+  <p>Главные медоносы отцветают, медосбор сокращается.</p>
+  <p>Семьи уменьшаются, июньские и июльские пчёлы умирают до зимы. До весны доживут те, что родятся в августе-сентябре.</p>
+  <p>Семья усиленно готовится к зиме.</p>
+  <h4>задачи на август</h4>
+  <ol>
+    <li>Откачивание мёда</li>
+    <li>Обсушивание сотов, из которых выкачан мёд.</li>
+    <li>Подготовка гнезд к зиме. Просушка и дезинфекция домиков.</li>
+    <li>Подкормки.</li>
+    <li>Складывают соты на хранение, негодные отбраковывают.</li>
+    <li>Подготавливают зимовик. Снимают надставки и вторые корпуса, осматривают запасы корма в гнёздах, распределяют по семьям.</li>
+    <li>Убирают недостроенные рамки. Прикрывают летки и заделывают щели в ульях.</li>
+    <li>Предотвращение пчелиного воровства.</li>
+    <li>Соединение слабых семей.</li>
+  </ol>
+  <h3>Сентябрь</h3>
+  <p>Завершается появление на свет долгожителей.</p>
+  <p>Молодняк совершает облёт, который поможет им пережить долгую зиму.</p>
+  <p>Когда температура опустится до +7С, начинается сбор в клуб.</p>
+  <p>Чтобы пчёлы пережили зиму, в ульи помещают по 20кг мёда - это для северных регионов. В южных областях хватает 13-15кг мёда.</p>
+  <h4>задачи на сентябрь</h4>
+  <ol>
+    <li>Убавляют многокорпусные ульи - оставляют всего две секции.</li>
+    <li>Проверяют качество кормов. Убирают падевый мёд - заменяют его более качественным кормом.</li>
+    <li>Чистят, дезинфицируют и складируют донья, корпуса, рамки.</li>
+    <li>Собирают прополис. Складируют рамки с мёдом и пергой.</li>
+    <li>Перетапливают восковое сырьё без воскотопки, готовят воск.</li>
+    <li>Сбор прополиса.</li>
+    <li>10-20 сентября проводят последнюю подкормку - используют готовый мёд, запечатаный в рамках.</li>
+    <li>Проводят обработку пчелиных семей от варроатоза.</li>
+  </ol>
+  <h3>Октябрь</h3>
+  <p>Когда октябрьская температура опустится ниже +12С, в жизни насекомых наступает затишье.</p>
+  <p>Начинается создание постоянного клуба.</p>
+  <p>Если погода улучшится, пчёлы полетят в зааключительный облёт, а затем снова соберутся в клуб.</p>
+  <h4>задачи на октябрь</h4>
+  <li>Завершаются работы в хранилище сот. Пчеловод отправляетмагазинные надставки и корпуса под навесы или на склад. Перебирает соты, избавляясь от изношенных.</li>
+  <li>Борьба с мышами.</li>
+  <li>Записывается - когда был совершён заключительный облёт.</li>
+  <h3>Ноябрь</h3>
+  <p>Кое-где уже выпадает снег. Пчёлы зимуют.</p>
+  <p>Сбиваясь в клуб, насекомые сберегают тепло.</p>
+  <p>Облёты подошли к концу, задача пчеловода - следить за ульями и инвентарём.</p>
+  <h4>задачи в ноябре</h4>
+  <li>Перевод пчёл в зимовник, просушенный и проветренный - после наступления стабильных морозов.</li>
+  <li>Если зимовка уличная, ульи укрывают от ветра - сверху и сбоку.</li>
+  <li>Поставив пчёл на зимовку, пчеловод следит за их поведением.</li>
+  <h3>Декабрь</h3>
+  <p>Семья, стремясь сохранить тепло, смещается, двигаясь за мёдом.</p>
+  <p>Пчёлы ведут себя тихо, Потребляют мало пищи.</p>
+  <p>У пчеловода в этот период дел немного. Достаточно периодически посещать зимовник, поддерживая оптимальную влажность, воздухообмен и температуру.</p>
+  <p>Просушивание ульев, анализ динамики жизни пчёл, годовые выводы.</p>
+</div>
+
+
