--- a/libre/index.html
+++ b/libre/index.html
@@ -76,6 +76,25 @@ P2P
         </code></pre>
       </details>
     </li>
+    <li>
+      <details>
+        <summary>Privaxy</summary>
+        <pre><code>
+Privaxy — как uBlock, но через прокси-сервер MitM и без расширения для браузера.
+
+Это рокси-сервер HTTP(s) MITM, который находится между приложениями, говорящими по HTTP(s), такими как веб-браузер, и HTTP-серверами, например, обслуживающими веб-сайты.
+
+Устанавливая двусторонний туннель между обоими концами, Privaxy может блокировать сетевые запросы на основе шаблонов URL-адресов и внедрять сценарии/стили в HTML-документы.
+
+▫️Работая на более низком уровне, Privaxy более эффективна и оптимизирована, чем блокировщики на основе надстроек браузера. 
+▫️Один экземпляр Privaxy на небольшой виртуальной машине, сервере или даже на том же компьютере, с которого исходит трафик, может фильтровать тысячи запросов в секунду, требуя при этом очень небольшого объема памяти.
+▫️Privaxy не ограничивается API-интерфейсами браузера и может работать с любым HTTP-трафиком, а не только с трафиком, поступающим из веб-браузеров.
+▫️Privaxy также намного более эффективен, чем блокировщики на основе DNS, поскольку он может работать непосредственно с URL-адресами и вводить ресурсы на веб-страницы.
+
+<a href="https://github.com/Barre/privaxy">github.com/Barre/privaxy</a>
+        </code></pre>
+      </details>
+    </li>
   </ul>
 </div>
 
