--- a/programming/ui_design.html
+++ b/programming/ui_design.html
@@ -12,6 +12,7 @@
 <div>
 	<h2>design / Верстка</h2>
 	<ul>
+		<li><a href="https://madeontilda.ru/">madeontilda</a></li>
 		capture a window on Mac (Shift, Command, 4, and Space bar)
 		<li><a href="https://ofont.ru/">ofont.ru</a></li>
 		<li><a href="https://material-ui.com">Material-UI</a></li>
@@ -29,6 +30,9 @@
 		<li><a href="https://www.gimp.org/">gimp.org</a></li>
 		<li><a href="https://www.figma.com"><img src="https://static.figma.com/app/icon/1/favicon.png" alt="figma"> figma.com</a> <span style="color: rgba(0,0,0,0);">1stepnoi</span> <a href="https://htmlacademy.ru/blog/useful/image/figma">Старт в Figma для верстальщика</a></li>
 		<li>AdobeXD</li>
+		<li><a href="https://dribbble.com/">dribbble</a></li>
+		<li><a href="https://onepagelove.com/">onepagelove</a></li>
+		<li><a href="https://land-book.com/">land-book</a></li>
 		<li><a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico" alt="awwwards"> awwwards.com</a></li>
 		<li><a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png" alt="cssdsgn"> cssdsgn.com</a></li>
 		<li><a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png" alt="unsplash"> unsplash.com</a></li>
@@ -55,6 +59,7 @@
 	<a href="https://fontface.ninja">fontface.ninja</a><br>
 	<a href="https://epicurrence.com">epicurrence.com</a><br>
 	<a href="https://cake.ru/">cake.ru</a><br>
+	<a href="https://red-look.ru/works/">red-look</a><br>
 	<a href="https://embedika.ru/">embedika</a><br>
 	<a href="https://hsworld.ru/systems">hsworld.ru</a><br>
 	<a href="https://tilda.cc/ru/madeontilda/#c=portfolio">Примеры дизайнов на тильде</a><br>
