--- a/steam/index.html
+++ b/steam/index.html
@@ -25,8 +25,10 @@
 <nav></nav>
 
 <div id="links">
-  <li><a href="https://yewtu.be/channel/UCGYgVfHu8O6FXVY7ru0S0ng">Паровой мотоцикл</a>, <a href="https://zen.yandex.ru/id/60a28ef9d5b4921c8b0e6553">zen</a></li>
+  <li><a href="https://www.chipmaker.ru/forum/136/">chipmaker.ru/паровые двигатели</a></li>
+  <li><a href="https://yewtu.be/channel/UCGYgVfHu8O6FXVY7ru0S0ng">Паровой мотоцикл</a>, <a href="https://zen.yandex.ru/id/60a28ef9d5b4921c8b0e6553">zen</a>, <a href="parovozyDV.docx" target="_blank">parovozyDV.docx</a></li>
   <li><a href="http://notecad.xyz/?filename=romantic_steam_new.xml">romantic_steam_new.xml</a></li>
+
   <li><a href="https://tube.cthd.icu/watch?v=Mc7uZLQslBA">Lanz Bulldog HL12</a></li>
 </div>
 
